data vault for bronze layer has been added